--- a/guide.html
+++ b/guide.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/hogwarts-logo-eb9852324f-seeklogo.com-128x105.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Bday Dhog</title>
+  <title>Guide Dhog</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
